# django-idempotency-key

./: .bumpversion.cfg  .coveragerc  .env.example  .flake8  .isort.cfg  .pre-commit-config.yaml  CHANGES.md  Makefile  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/actions/django-idempotency-key-build/: action.yml
.github/actions/lint/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: codeql.yml  continuous_integration.yml  release.yml
docs/: MAKING_RELEASES.md
idempotency_key/: compat.py  decorators.py  encoders.py  exceptions.py  locks.py  middleware.py  storage.py  utils.py
tests/: settings.py  test_middleware.py  test_middleware_exempt.py  urls.py  views.py  viewsets.py  wsgi.py
tests/tests/: test_django_debug_toolbar.py  test_encoder.py  test_locks.py  test_middleware.py  test_middleware_exempt.py  test_middleware_exempt_viewsets.py  test_middleware_viewsets.py  test_storage.py  test_storage_locking.py  test_utils.py  utils.py
