[tool.poetry]
name = "django-idempotency-key"
version = "1.2.0"
description = "Django middleware for idempotency key support in view and viewset functions."
authors = ["YoyoDevs <dev@yoyowallet.com>"]
license = "MIT"
packages = [
    {include = "idempotency_key"}
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
Django = ">=2.2"
djangorestframework = ">=3.8"
django-redis = ">=5.2.0"
redis = ">=4.5.4"

[tool.poetry.group.dev.dependencies]
black = "*"
bump2version = "*"
codecov = "*"
django-debug-toolbar = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-django = "*"
tox = "*"
twine = "*"
xenon = "*"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
